--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -114,13 +114,15 @@
             position: fixed;
             top: 20px;
             right: 20px;
+            height: 8%;
             background: none;
             border: none;
             color: var(--text-color);
             cursor: pointer;
-            padding: 11px;
-            border-radius: 2%;
+            padding: 11px 20px;
+            border-radius: 45%;
             transition: all 0.3s ease;
+            width: 4%;
         }
         .theme-toggle:hover {
             background-color: var(--input-border);
