--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -143,34 +143,37 @@
     </button>
     <div class="container">
         <h1>URL Shortener</h1>
-        <form id="shorten-form" method="post" action="/url">
+        <form id="shorten-form" method="post" action="/url" autocomplete="off">
             <div class="form-group">
                 <label for="targetUrl">Target URL</label>
-                <input type="url" id="targetUrl" name="target_url" placeholder="Enter a valid URL" required>
+                <input type="url" id="targetUrl" name="target_url" placeholder="Enter a valid URL" required autocomplete="off">
             </div>
             <div class="form-group">
                 <label for="customKey">Custom Key (Optional)</label>
-                <input type="text" id="customKey" name="custom_key" placeholder="Enter a custom key">
+                <input type="text" id="customKey" name="custom_key" placeholder="Enter a custom key" autocomplete="off">
             </div>
             <div class="form-group">
                 <label for="password">Password (Optional)</label>
-                <input type="password" id="password" name="password" placeholder="Set a password for this URL">
+                <input type="password" id="password" name="password" placeholder="Set a password for this URL" autocomplete="new-password">
             </div>
             <div class="form-group">
                 <label for="expirationDate">Expiration Date (Optional)</label>
-                <input type="datetime-local" id="expirationDate" name="expiration_date">
+                <input type="datetime-local" id="expirationDate" name="expiration_date" autocomplete="off">
             </div>
             <button type="submit">Shorten URL</button>
-        </form>
+        </form>        
         <div id="result" class="result-box" style="display: none;">
             <h5>Secret Key:</h5>
             <a id="secretKey"></a>
             <br>
+            <br>
             <h5>Shortened URL:</h5>
             <a id="shortenedUrl" href="#" target="_blank"></a>
             <br>
+            <br>
             <h5>Expires at:</h5>
             <a id="expireAt"></a>
+            <br>
             <br>
             <h5>QR Code:</h5>
             <img id="qrCode" src="#" alt="QR Code" style="max-width: 100%; height: auto;">
