--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -88,8 +88,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="secretKey">Secret Key (for View/Delete)</label>
-                <input type="text" id="secretKey" name="secret_key" placeholder="Enter the secret key">
+                <label for="keu">Key (for View/Delete)</label>
+                <input type="text" id="key" name="key" placeholder="Enter the key">
             </div>
             <button type="button" id="submitButton">Submit</button>
         </form>
@@ -99,18 +99,18 @@
     <script>
         document.getElementById('submitButton').addEventListener('click', async () => {
             const action = document.getElementById('adminAction').value;
-            const secretKey = document.getElementById('secretKey').value;
+            const key = document.getElementById('key').value;
             const responseMessage = document.getElementById('responseMessage');
             responseMessage.innerHTML = '';
     
             try {
                 let response;
                 if (action === 'view_url') {
-                    response = await fetch(`/admin/${secretKey}`, {
+                    response = await fetch(`/admin/${key}`, {
                         method: 'GET',
                     });
                 } else if (action === 'delete_url') {
-                    response = await fetch(`/admin/${secretKey}`, {
+                    response = await fetch(`/admin/${key}`, {
                         method: 'DELETE',
                     });
                 } else {
