--- a/app/templates/password.html
+++ b/app/templates/password.html
@@ -17,14 +17,15 @@
     <div class="container">
         <h1>Password</h1>
         <p>URL: /{{ url_key }}</p>
-        <form id="password-form" method="post" action="/url">
+        <form id="password-form">
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter the password" required>
             </div>
             <button type="submit">Submit</button>
         </form>
-        <a href="/" class="button">Go Back to Home</a>
+        <br>
+        <button onclick="window.location.href='/' ;">Return to Home</button>
         <div id="error" class="error-message" style="display: none;"></div>
     </div>
     <script>
